refactor: modifica forma de implementacao